--- a/sperated_db_api/views/invoice.ejs
+++ b/sperated_db_api/views/invoice.ejs
@@ -702,9 +702,9 @@
                                                                     currency: data.currencyFormat,  
                                                                     
                                                                     
-                                                                }).format(data.oldDueAmt) %>
+                                                                }).format(Number(data.oldDueAmt) + Number(data.CurrentInvoiceBalance)) %>
                                                             <% } else { %>
-                                                                <%= data.oldDueAmt %>
+                                                                <%= Number(data.oldDueAmt) + Number(data.CurrentInvoiceBalance) %>
                                                             <% } %>
                                                             </li>
                                                             <%}%>
