--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -346,8 +346,8 @@
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-6  mb-0 ml-auto">
                                     <button (click)="PurchaseDetailPDF()" class="shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
-                                    <button (click)="sendWhatsapp('')" [disabled]="this.ReturnPDF == ''" class="whatsapp ms-1 me-1"><i class="fa-brands fa-whatsapp" ></i> </button>
-                                    <button class="email"> <i class="fa-solid fa-envelope"></i></button>
+                                    <button type="button"  (click)="sendWhatsapp('')" [disabled]="this.ReturnPDF == ''" class="whatsapp ms-1 me-1"><i class="fa-brands fa-whatsapp" ></i> </button>
+                                    <button type="button"  class="email" (click)="sendEmail()"> <i class="fa-solid fa-envelope"></i></button>
                                 </div>
                             </div>
                             <!-- Total calculcation end -->
