--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -973,6 +973,8 @@
                                                                                     (click)="sendWhatsappPower(i,'spectacle')"
                                                                                     class="whatsapp  "><i
                                                                                         class="fa-brands fa-whatsapp"></i></button>
+
+                                                                                        <button type="button" (click)="sendEmail('spectacle')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button>
                                                                             </td>
                                                                             <td class="text-left">
                                                                                 {{spectacleLists.length -
@@ -1608,6 +1610,8 @@
                                                                                     (click)="sendWhatsappPower(i,'contact')"
                                                                                     class="whatsapp  "><i
                                                                                         class="fa-brands fa-whatsapp"></i></button>
+
+                                                                                        <button type="button" (click)="sendEmail('clens')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button>
                                                                             </td>
                                                                             <td class="text-left">{{contactList.length -
                                                                                 i
@@ -1853,6 +1857,7 @@
                                                                                     class="whatsapp  "><i
                                                                                         class="fa-brands fa-whatsapp"></i></button>
 
+                                                                                        <button type="button" (click)="sendEmail('other')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button>
                                                                             </td>
                                                                             <td class="text-left">{{otherList.length - i
                                                                                 }}
