--- a/web1/src/app/inventory/purchase-return/purchase-return.component.css
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.css
@@ -1,15 +1,16 @@
-.email{
+.email {
 
-font-size: 20px;
-background: #f71a1c;
-border: none;
-border-radius: 5px;
-padding: 7px 5px;
-color: #fff;
-box-shadow: 2px 2px 5px #00000047;
+    font-size: 20px;
+    background: #f71a1c;
+    border: none;
+    border-radius: 5px;
+    padding: 7px 5px;
+    color: #fff;
+    box-shadow: 2px 2px 5px #00000047;
+    cursor: pointer;
 }
 
-.whatsapp{
+.whatsapp {
     font-size: 20px;
     background: #72ff55;
     border: none;
@@ -17,9 +18,10 @@ box-shadow: 2px 2px 5px #00000047;
     padding: 6px;
     color: #fff;
     box-shadow: 2px 2px 5px #00000047;
+    cursor: pointer;
 }
 
-.shopPdf{
+.shopPdf {
     background: #3f51b5;
     color: white;
     border: none;
@@ -28,14 +30,15 @@ box-shadow: 2px 2px 5px #00000047;
     box-shadow: 1px 1px 10px #0003;
     cursor: pointer;
     font-size: 19px;
-  }
-
-  .deleteClass{
-    color:red !important;
-    text-decoration:line-through !important; 
 }
-.addClass{
-    color:green !important;
+
+.deleteClass {
+    color: red !important;
+    text-decoration: line-through !important;
+}
+
+.addClass {
+    color: green !important;
 }
 
 .delete_icons {
