--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1071,7 +1071,9 @@
                    
 
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"   [disabled]="this.fortyPercentDisabledB == true" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
-                    <button type="button" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
+
+                    <button type="button" (click)="sendEmail('Bill')" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
+
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
                 </div>
@@ -1420,7 +1422,7 @@
                         Credit Note
                     </button>
                     <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="CreditPDF == ''" (click)="sendWhatsapp('credit')" class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp"></i></button>
-                    <button type="button" class="email"><i class="fa-solid fa-envelope"></i></button>
+                    <button type="button" (click)="sendEmail('Credit')" class="email"><i class="fa-solid fa-envelope"></i></button>
                 </div>
             </div>
         </form>
