--- a/web1/src/app/sale/billing/billing.component.css
+++ b/web1/src/app/sale/billing/billing.component.css
@@ -251,6 +251,19 @@
     transition: 0.5s;
 }
 
+.email_icon {
+    background: #ff0000;
+    color: #fff;
+    padding: 2px;
+    border-radius: 24px;
+    font-size: 15px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    border:none;
+    transition: 0.5s;
+}
+
 .ng-select .ng-select-container {
     color: #333;
     background-color: #fff;
