--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -137,9 +137,9 @@
                         <tr *ngFor="let Bdata of dataList ; let i = index;"
                           [ngStyle]="{whiteSpace: 'nowrap', overflowX: 'auto'}">
                           <td>
-                            <button  class="bg-btn " (click)="sendEmail(Bdata)">
+                            <!-- <button  class="bg-btn " (click)="sendEmail(Bdata)">
                               <mat-icon class="delete_icon me-1">email</mat-icon>
-                            </button>
+                            </button> -->
 
                             <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
