--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -974,7 +974,7 @@
                                                                                     class="whatsapp  "><i
                                                                                         class="fa-brands fa-whatsapp"></i></button>
 
-                                                                                        <button type="button" (click)="sendEmail('spectacle')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button>
+                                                                                        <!-- <button type="button" (click)="sendEmail('spectacle')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button> -->
                                                                             </td>
                                                                             <td class="text-left">
                                                                                 {{spectacleLists.length -
@@ -1611,7 +1611,7 @@
                                                                                     class="whatsapp  "><i
                                                                                         class="fa-brands fa-whatsapp"></i></button>
 
-                                                                                        <button type="button" (click)="sendEmail('clens')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button>
+                                                                                        <!-- <button type="button" (click)="sendEmail('clens')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button> -->
                                                                             </td>
                                                                             <td class="text-left">{{contactList.length -
                                                                                 i
@@ -1857,7 +1857,7 @@
                                                                                     class="whatsapp  "><i
                                                                                         class="fa-brands fa-whatsapp"></i></button>
 
-                                                                                        <button type="button" (click)="sendEmail('other')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button>
+                                                                                        <!-- <button type="button" (click)="sendEmail('other')" class="email_icon ms-1"><i class="fa-solid fa-envelope"></i></button> -->
                                                                             </td>
                                                                             <td class="text-left">{{otherList.length - i
                                                                                 }}
