--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -111,7 +111,12 @@
                         <tr  *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 7%;">
-                            <button *ngIf="this.company.WhatsappMsg == 'true'"  (click)="sendWhatsapp('Fbill',data)" class="bg-btn whatsappBill ms-lg-1 me-lg-1  me-1"><i  class="fa-brands fa-whatsapp "></i></button>
+
+                              <button  type="button" class="bg-btn " (click)="sendEmail(data)">
+                              <mat-icon class="delete_icon me-1">email</mat-icon>
+                            </button>
+
+                            <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"  (click)="sendWhatsapp('Fbill',data)" class="bg-btn whatsappBill ms-lg-1 me-lg-1  me-1"><i  class="fa-brands fa-whatsapp "></i></button>
                             <!-- <button class="bg-btn">
                               <mat-icon class="edit_icon pt-1">remove_red_eye</mat-icon>
                             </button> -->
